--- a/css/style.css
+++ b/css/style.css
@@ -1,48 +1,52 @@
-.container{
-    background-color: hsl(20, 43%, 96%);
-    width: 100%;
-    height: 100vh;
-    border: 1px solid black;
-    overflow-y:  scroll;
-    
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
   }
-  .center{
-    display: block;
-    width: 50%;
-    margin:0 auto; 
+  
+  @import url('https://fonts.googleapis.com/css2?family=Kanit:wght@300&family=MuseoModerno:wght@200&display=swap');
+  
+  body {
+    background-color: rgb(240, 240, 240);
+    font-family: 'Kanit', sans-serif;
+    font-family: 'MuseoModerno', cursive;
+
   }
-  h1{
-    margin:0;
-    padding-bottom: 50px;
+  
+  h1 {
     text-align: center;
-    padding-right: 180px;
+    margin: 50px;
   }
-  .gallery {
-      margin: 3px;
-      border: 1px solid #ccc;
-      float: left;
-      width: 200px;
-      height:fit-content;
-      border-radius: 5px;
-     
-    }
-    
-    .gallery:hover {
-      border: 1px solid #777;
-    }
-    
-    .gallery img {
-      width: 100%;
-      height: auto;
-      
-    }
-    
-    .border p {
-      text-align: center;
-      width:fit-content;
-      height:fit-content;
-    }.border{
-      display: inline-flex;
-      width:fit-content;
-      height:fit-content;
-    }
+  
+  .content {
+    margin: 50px 180px;
+    display: flex;
+    width: 50%;
+    margin:0 auto;
+    margin-left:40vh;
+  }
+  
+  .colum-1, .colum-2, .colum-3, .colum-4 {
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .box1 {
+    width: 250px;
+    margin-right: 15px;
+    margin-bottom: 15px;
+  }
+  
+  .box1 img {
+    width: 100%;
+    height: auto;
+    display: block;
+    border-radius: 4px;
+  }
+  
+  .box1 figcaption {
+    padding: 15px;
+    background-color: white;
+    border-radius: 4px;
+    color: rgb(161, 160, 160);
+  }
